--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
+dj-database-url==0.5.0
 Django==3.2
 Pillow==9.3.0
+psycopg2-binary==2.9.1
 pytz==2022.6
 sqlparse==0.4.3
